trying to fix the wrap by specifying dimensions.

--- a/free.css
+++ b/free.css
@@ -96,6 +96,8 @@ div.year{
     margin: 0px 97px 38px 45px;
 }
 .marks{
+    width: 170px;
+    height: 20px;
     margin-bottom: 16px;
     
 }
